Changes for 1.6
* Created new PlayerAttachment option, "shareTechnology", which will automatically give all technology to other players during tech activation phase. (veqryn)

* Changed priority of AA casualty choosing system to: chooseAACasualties -> isRollAAIndividually -> isRandomAACasualties. This means that "choose aa" overrides all, while "roll aa individually" will only override "random aa". (veqryn)

* Allowed "unitAbilitiesGained" to give "canBlitz" and "canBombard". (veqryn)

* Created new techAbilityAttachment, "unitAbilitiesGained", which allows units to gain abilities when technology is discovered. (veqryn)

* Created new techAbilityAttachment, "rocketNumberPerTerritory", which controls the maximum number of dice to be rolled per territory. (veqryn)

* Created new techAbilityAttachment, "rocketDistance", which controls the maximum distance rockets can travel. (veqryn)

* Created new techAbilityAttachment, "rocketDiceNumber", which controls the number of dice each rocket rolls. (veqryn)

* Created new RelationshipTypeAttachment option, "rocketsCanFlyOver", which allows rockets to fly over by default. (veqryn)

* Created new techAbilityAttachment, "warBondDiceNumber", which controls how many dice get rolled for war bonds. (veqryn)

* Created new techAbilityAttachment, "warBondDiceSides", which controls how large the dice are which are rolled to determine the war bonds bonus. (veqryn)

* Created new techAbilityAttachment, "repairDiscount", which controls the discount to repairing given by any technology. (veqryn)

* Created new techAbilityAttachment, "minimumTerritoryValueForProductionBonus", which controls the minimum value of a territory that a factory units must be in to receive the production bonus. (veqryn)

* Created new techAbilityAttachment, "productionBonus", which controls the bonus given to production by any technology. (veqryn)
