@@ -13,7 +13,9 @@
  */
 package games.strategy.triplea.delegate.dataObjects;
 
+import games.strategy.engine.data.PlayerID;
 import games.strategy.engine.data.TechnologyFrontier;
+import games.strategy.util.IntegerMap;
 
 /**
  * Used to describe a tech roll.
@@ -25,18 +27,24 @@ public class TechRoll
 	private final TechnologyFrontier m_tech;
 	private final int m_rolls;
 	private int m_newTokens;
+	private final IntegerMap<PlayerID> m_whoPaysHowMuch;
 	
 	public TechRoll(final TechnologyFrontier advance, final int rolls)
 	{
-		m_rolls = rolls;
-		m_tech = advance;
+		this(advance, rolls, 0);
 	}
 	
 	public TechRoll(final TechnologyFrontier advance, final int rolls, final int newTokens)
 	{
+		this(advance, rolls, newTokens, null);
+	}
+	
+	public TechRoll(final TechnologyFrontier advance, final int rolls, final int newTokens, final IntegerMap<PlayerID> whoPaysHowMuch)
+	{
 		m_rolls = rolls;
 		m_tech = advance;
 		m_newTokens = newTokens;
+		m_whoPaysHowMuch = whoPaysHowMuch;
 	}
 	
 	public int getRolls()
@@ -57,5 +65,10 @@ public class TechRoll
 	public void setNewTokens(final int tokens)
 	{
 		this.m_newTokens = tokens;
+	}
+	
+	public IntegerMap<PlayerID> getWhoPaysHowMuch()
+	{
+		return m_whoPaysHowMuch;
 	}
 }
