@@ -1,4 +1,8 @@
 Changes for 1.6
+* Expanded Tech delegate UI element to use helpPayTechCost. (veqryn)
+
+* Created new PlayerAttachment option, "helpPayTechCost", which will allow other players to help pay the cost of technology. (veqryn)
+
 * Created new PlayerAttachment option, "shareTechnology", which will automatically give all technology to other players during tech activation phase. (veqryn)
 
 * Changed priority of AA casualty choosing system to: chooseAACasualties -> isRollAAIndividually -> isRandomAACasualties. This means that "choose aa" overrides all, while "roll aa individually" will only override "random aa". (veqryn)
